--- a/pract04/Gemfile
+++ b/pract04/Gemfile
@@ -3,3 +3,15 @@ source 'https://rubygems.org'
 gem 'rack'
 gem 'thin'
 gem 'haml'
+
+group :desarrollo do
+  gem 'rack'
+  gem 'thin'
+  gem 'haml'
+end
+
+group :testing do
+  gem 'debugger'
+  gem 'pry'
+  gem 'pry-debugger'
+end
