--- a/pract05/Rakefile
+++ b/pract05/Rakefile
@@ -17,3 +17,13 @@ desc "run the client with scissors"
 task :scissors do
   sh %q{curl -v 'http://localhost:9292?choice=scissors'}
 end
+
+desc "Ejecutar tests con Pruebas Unitarias"
+task :test do
+  sh "ruby -Ilib -Itest test/tc_rps.rb"
+end
+
+desc "Ejecutar tests rspec"
+task :spec do
+  sh "rspec -Ilib -Ispec spec/rsack/server_spec.rb"
+end
