--- a/pract05/Gemfile
+++ b/pract05/Gemfile
@@ -1,17 +1,7 @@
 source 'https://rubygems.org'
 
-gem 'rack'
-gem 'thin'
-gem 'haml'
-
-group :desarrollo do
-  gem 'rack'
-  gem 'thin'
-  gem 'haml'
-end
-
-group :testing do
-  gem 'debugger'
-  gem 'pry'
-  gem 'pry-debugger'
-end
+gem 'rack', :group  => [:development]
+gem 'thin', :group  => [:development]
+gem 'haml', :group  => [:development]
+gem 'rspec', :groups  => [:development, :test]
+gem 'rack-test', :groups  => [:development, :test]
