--- a/pract06/Gemfile
+++ b/pract06/Gemfile
@@ -5,3 +5,4 @@ gem 'thin', :group  => [:development]
 gem 'haml', :group  => [:development]
 gem 'rspec', :groups  => [:development, :test]
 gem 'rack-test', :groups  => [:development, :test]
+gem 'heroku', :groups  => [:development, :test]
